# typeleast

./: .gitignore  .swiftlint.yml  CLAUDE.md  CONTRIBUTING.md  HOMEBREW.md  Info.plist  LICENSE  Makefile  Package.swift  README.md  test_semantic_correction.py
Sources/: VersionInfo.swift.template
Sources/Resources/: pyproject.toml
Tests/: AccessibilityPermissionManagerTests.swift  ActivityCalendarLayoutTests.swift  AppCategoryManagerTests.swift  AppDefaultsTests.swift  AppDelegateMenuTests.swift  AppIdentityTests.swift  AppMigrationTests.swift  AppSetupHelperTests.swift  AppStatusTests.swift  AudioProcessorTests.swift  AudioRecorderTests.swift  AudioValidatorTests.swift  DashboardTimingAnalysisViewTests.swift  DataManagerIntegrationTests.swift  DataManagerTests.swift  ErrorPresenterTests.swift  HotKeyManagerTests.swift  HotKeyRecorderViewTests.swift  KeyboardEventHandlerTests.swift  KeychainServiceTests.swift  LanguageManagerTests.swift  LegacyUsageBackfillTests.swift  LiveTextInsertionManagerTests.swift  LocalWhisperServiceTests.swift  MLDaemonManagerTests.swift  MLXCorrectionServiceTests.swift  ModelManagerTests.swift  OpenAIRealtimeTranscriberTests.swift  ParakeetServiceTests.swift  PasteManagerTests.swift  PermissionManagerTests.swift  PressAndHoldKeyMonitorTests.swift  PythonDetectorTests.swift  README.md  RealtimeAudioRecordingTests.swift  RecordingHUDPresentationTests.swift  RecordingWindowPositionerTests.swift  SemanticCorrectionServiceTests.swift  SemanticCorrectionTests.swift  ShowAudioFileButtonTest.swift  (+18 more)
outputs/: realtime-test-app-validation-20260711.md
(+100 files in other folders)
